Last internal reveiw

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -2,11 +2,11 @@
 
 Sustainable management of marine fisheries has been recognized as a critical challenge facing society in the 21^st^ century [@cbdAichiBiodiversityTargets2018]. The issues facing sustainable fisheries management are multifaceted and include interactions between complex ecological, socio-economic, and political factors [@halpernAchievingTripleBottom2013]. For example, fisheries management regions were often delineated as a result of political or geographic considerations rather than biological or ecological rationale. As a result, the management of a species within a region can vary from situations in which the management encompasses only a subset of the total population of a species, to situations in which the majority of the stock is manged across a region with significant heterogeneity in the processes that drive the population dynamics [@cadrinDefiningSpatialStructure2020a].
 
-Accounting for spatial and temporal heterogeneity in the processes that drive a stocks population dynamics has long been recognized as a challenge in fisheries science [@bevertonDynamicsExploitedFish1957; @hilbornQuantitativeFisheriesStock1992; @rickerFurtherNotesFishing1944]. Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require assumptions about the underlying spatial processes, these assumptions generally result in models that treat stocks as spatially homogeneous entities. [@bevertonDynamicsExploitedFish1957; @rickerComputationInterpretationBiological1975; @hilbornQuantitativeFisheriesStock1992]. Many of these assumptions were required because of computational and statistical limitations and has lead to science products that do not fully utilize the spatio-temporal information contained in the underlying data. Techniques, such as survey stratification, have been utilized in an effort to account for spatial heterogeneity and reduce uncertainty in the indices feeding these models [@smithAnalysisDataBottom1996]. In addition, indices have been developed that can measure the evenness of the spatial distribution of a stock, these indicies are typically used to quantify changes in spatial patterns over time [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015]. These indices are an additional source of information providing a synoptic view of whether the distribution of parameters of interest (e.g. survey abundance or biomass) has changed over time, but they are unable to provide a detailed understanding of the spatial changes in these distributions.
+Accounting for spatial and temporal heterogeneity in the processes that drive a stocks population dynamics has long been recognized as a challenge in fisheries science [@bevertonDynamicsExploitedFish1957; @hilbornQuantitativeFisheriesStock1992; @rickerFurtherNotesFishing1944]. Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require assumptions about the underlying spatial processes, these assumptions generally result in models that treat stocks as spatially homogeneous entities. [@bevertonDynamicsExploitedFish1957; @rickerComputationInterpretationBiological1975; @hilbornQuantitativeFisheriesStock1992]. Many of these assumptions were required because of computational and statistical limitations and has lead to science products that do not fully utilize the spatio-temporal information contained in the underlying data. Techniques, such as survey stratification, have been utilized in an effort to account for spatial heterogeneity and reduce uncertainty in the indices feeding these models [@smithAnalysisDataBottom1996]. In addition, indices have been developed that can measure the evenness of the spatial distribution of a stock, these indicies are typically used to quantify changes in spatial patterns over time [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015]. These indices are an additional source of information providing a synoptic view of how distributions of paramters (e.g. survey abundance or biomass) have changed over time, but they are unable to provide a detailed understanding of the spatial changes in these distributions.
 
-Species distribution models (SDMs) were one of the earliest modelling frameworks developed to better understand spatial distributions and the processes that influence the observed patterns in species distributions [@grinnellOriginDistributionChestNutBacked1904; @boxPredictingPhysiognomicVegetation1981; @boothBioclimFirstSpecies2014]. These models use environmental data and species ecological information to map the occurrence probability (OP; or some measure of abundance) of a species across some land(sea)-scape; quantitative SDMs originated with attempts to predict terrestrial plant distributions [@boxPredictingPhysiognomicVegetation1981]. In the marine realm, the use of SDMs has increased rapidly in recent years; SDMs have been used in the development of Marine Protect Areas (MPAs) and MPA networks, to better understand the distribution of Species at Risk (SAR), and to predict the impact of climate change [@cheungApplicationMacroecologicalTheory2008; @robinsonPushingLimitsMarine2011; @sundbladEcologicalCoherenceMarine2011; @domischSpatiallyExplicitSpecies2019; @mchenryProjectingMarineSpecies2019].
+Species distribution models (SDMs) were one of the earliest modelling frameworks developed to better understand spatial distributions and the processes that influence the observed patterns in species distributions [@grinnellOriginDistributionChestNutBacked1904; @boxPredictingPhysiognomicVegetation1981; @boothBioclimFirstSpecies2014]. These models use environmental data and species ecological information to map the occurrence probability (OP; or some measure of abundance) of a species across some land(sea)-scape; quantitative SDMs originated with attempts to predict terrestrial plant distributions [@boxPredictingPhysiognomicVegetation1981]. In the marine realm, the influence of SDMs has increased rapidly in recent years; SDMs have been used in the development of Marine Protect Areas (MPAs) and MPA networks, to better understand the distribution of Species at Risk (SAR), and to predict the impact of climate change [@cheungApplicationMacroecologicalTheory2008; @robinsonPushingLimitsMarine2011; @sundbladEcologicalCoherenceMarine2011; @domischSpatiallyExplicitSpecies2019; @mchenryProjectingMarineSpecies2019].
 
-Historically, SDMs often did not explicitly consider temporal changes in the relationship between the environment and the response of the species; these SDMs therefore provide a snapshot in time based on available data [@elithSpeciesDistributionModels2009]. However, more sophisticated SDM frameworks have been developed in which the underlying relationships can vary in time and space, this has lead to more dynamic models which can provide improved predictions and more completely utilize the information contained within these data [@merowDevelopingDynamicMechanistic2011; @thorsonJointDynamicSpecies2016; @martinez-minayaSpeciesDistributionModeling2018]. The development of these new spatio-temporal SDM models have been made possible by a number of recent statistical and computational advances such as the implementation of the Laplace approximation (LA), Automatic Differentiation (AD), Stochastic Partial Differential Equations (SPDE), and Gaussian Markov Random Fields (GMRFs) in commonly used programming languages [@kristensenTMBAutomaticDifferentiation2016; @rueBayesianComputingINLA2016; @thorsonGuidanceDecisionsUsing2019]. The complex spatio-temporal analytical problems associated with these advanced SDM models can now be solved in a fraction of the time required by traditional methods.
+Historically, SDMs often did not explicitly consider temporal changes in the relationship between the environment and the response of the species; these SDMs provided a snapshot in time based on available data [@elithSpeciesDistributionModels2009]. However, more sophisticated SDM frameworks have been developed in which the underlying relationships can vary in time and space, this has lead to more dynamic models which can provide improved predictions and more completely utilize the information contained within the data [@merowDevelopingDynamicMechanistic2011; @thorsonJointDynamicSpecies2016; @martinez-minayaSpeciesDistributionModeling2018]. The development of these new spatio-temporal SDM models have been made possible by a number of recent statistical and computational advances such as the implementation of the Laplace approximation (LA), Automatic Differentiation (AD), Stochastic Partial Differential Equations (SPDE), and Gaussian Markov Random Fields (GMRFs) in commonly used programming languages [@kristensenTMBAutomaticDifferentiation2016; @rueBayesianComputingINLA2016; @thorsonGuidanceDecisionsUsing2019]. The complex spatio-temporal analytical problems associated with these advanced SDM models can now be solved in a fraction of the time required by traditional methods.
 
 ### Georges Bank
 
@@ -16,7 +16,7 @@ Historically, GB supported substantial groundfish fisheries including Atlantic C
 
 <!-- Fisheries management bodies in both Canada and the U.S. have implemented measures to protect the Atlantic Cod and Yellowtail Flounder stocks on GB. While these measures vary between the countries, there is a collaborative process to develop a shared quota for these two stocks [@tracTransboundaryResourceAssessment2020]; a quota which has declined substantially for both stocks over the last decade [@andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. In addition to regulations that attempt to directly limit fishing mortality, both countries have implemented spatial closures (Figure @ref(fig:Overview)). In the U.S., two large closed areas were implemented (Closed Area I (CA I) and II (CA II)) with the intent of aiding in the recovery of groundfish and invertebrate stocks on GB. These closures were established in 1994 and have been modified over time to occasionally allow some fishing activity [@linkEffectsAreaClosures2005; @murawskiLargescaleClosedAreas2000]. On the Canadian portion of GB, the groundfish fishery has historically been closed from March 1^st^ to May 31^st^ to protect spawning groundfish. In 1994 the closure was expanded to include the months of January and February in an effort to rebuild the Atlantic Haddock stock. This closure was subsequently shortened in 2005 to exclude January, resulting in a closure of the groundfish fishery from February through to the end of May. The Canadian Offshore Scallop Fishery (COSF) also faces restrictions on fishing during the peak groundfish spawning periods with time-area closures limiting the area in which this fishery can operate during February and March [Atlantic Cod; @dfoScallopFisheryArea2019] and June [Yellowtail Flounder; @dfoScallopFisheryArea2014]. The U.S. closures have been linked to the recovery of several stocks on GB [@linkEffectsAreaClosures2005; @murawskiLargescaleClosedAreas2000] although the reasons for the recent decline of Yellowtail Flounder and the ongoing lack of recovery of Atlantic Cod on the bank since the implementation of these closures remains uncertain [@andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. In Canada, there had been no comprehensive review of the closures until a recent review by @keithEvaluatingSocioeconomicConservation2020 that found little evidence that the COSF time-area closures were achieving their management objectives. This analysis also highlighted the need for a better understanding of the spatio-temporal distributions of both of these stocks in relation to the location and timing of these closures. -->
 
-Here we use a recently developed statistical framework [R-INLA; @lindgrenBayesianSpatialModelling2015; @rueBayesianComputingINLA2016; @bakkaSpatialModellingRINLA2018] to develop spatio-temporal species distribution models for two depleted groundfish stocks on GB (Atlantic cod and Yellowtail flounder). Our objectives were to use data from 3 groundfish surveys in the region to; 1) develop temporally variable species distribution models for these two species and explore whether these distributions were influenced by a suite of static environmental layers, 2) identify any long-term shifts in the distribution of these stocks, 3) identify any seasonal changes in the SDMs using survey data collected in the winter, spring and fall, and 4) use the SDMs to quantify any observed shifts in core area within Canadian and U.S. waters.
+Here we use a recently developed statistical framework [R-INLA; @lindgrenBayesianSpatialModelling2015; @rueBayesianComputingINLA2016; @bakkaSpatialModellingRINLA2018] to develop spatio-temporal species distribution models for two depleted groundfish stocks on GB (Atlantic Cod and Yellowtail Flounder). Our objectives were to use data from 3 groundfish surveys in the region to; 1) develop temporally variable species distribution models for these two species and explore whether these distributions were influenced by a suite of static environmental layers, 2) identify any long-term shifts in the distribution of these stocks, 3) identify any seasonal changes in the SDMs using survey data collected in the winter, spring and fall, and 4) use the SDMs to quantify any observed shifts in core area within Canadian and U.S. waters.
 
 <!-- From a scientific perspective, disentangling how environmental, ecological, and anthropogenic factors impact the population dynamics of marine fishes is pivotal to development of sustainability strategies.  -->
 
