--- a/03-results.Rmd
+++ b/03-results.Rmd
@@ -2,7 +2,7 @@
 
 ## Distributional Shifts
 
-For both stocks their core areas shifted towards the north and east throughout the study period, this was most noticeable when focusing on the core area (OP $\geq$ `r hi.prob`) regions (Figure \@ref(fig:cog-hep)).  For Atlantic Cod the shift in distribution of the core area regions occurred relatively rapidly in the 1990s and the centre of gravity (COG) has been relatively stable since this period (Figure \@ref(fig:cog-hep)). In the 1970s and 1980s, core area was observed across the bank, however since the mid-1990s there is a clear shift in distribution with core area concentrated along the north-east of the bank mainly in Canadian waters (Figures \@ref(fig:pf-winter-cod) -\@ref(fig:pf-fall-cod)). In addition, in the Fall, Atlantic Cod has tended to be distributed along the northern edge of GB and the distribution of Atlantic Cod during this time likely includes the northern slope of the bank where there is limited survey coverage. The size of the core area has followed a similar temporal pattern as the distribution, with a rapid decline in the core area for Atlantic Cod occurring in the 1990s in the Winter and Spring (Figure \@ref(fig:area-hep)). In the Fall the decline in the size of the core area was observed approximately a decade earlier than in the Winter or Spring and the core area has been much smaller in the Fall (Figure \@ref(fig:area-hep)). Given the location of the stock along the edge of the bank during the Fall it is likely that a substantial portion of the stock is located along the slope where survey coverage is limited (Figure \@ref(fig:Overview)).
+For both stocks their core areas shifted towards the north and east throughout the study period, this was most noticeable when focusing on the core area (OP $\geq$ `r hi.prob`; Figure \@ref(fig:cog-hep)).  For Atlantic Cod the shift in distribution of the core area occurred relatively rapidly in the 1990s and the centre of gravity (COG) of the core area has been relatively stable since this period (Figure \@ref(fig:cog-hep)). In the 1970s and 1980s, core area was observed across the bank, however since the mid-1990s there is a clear shift in distribution with core area concentrated along the north-east of the bank mainly in Canadian waters (see Supplemental Figures \@ref(fig:pf-winter-cod) -\@ref(fig:pf-fall-cod)). In addition, in the Fall, Atlantic Cod has tended to be distributed along the northern edge of GB and the distribution of Atlantic Cod during this time likely includes the northern slope of the bank where there is limited survey coverage. The size of the core area has followed a similar temporal pattern as the distribution, with a rapid decline in the core area for Atlantic Cod occurring in the 1990s in the Winter and Spring (Figure \@ref(fig:area-hep)). In the Fall the decline in the size of the core area was observed approximately a decade earlier than in the Winter or Spring and the core area has always been much smaller in the Fall (Figure \@ref(fig:area-hep)). Given the location of the stock along the edge of the bank during the Fall it is likely that a substantial portion of the stock is located along the slope where survey coverage is limited (Figure \@ref(fig:Overview)).
 
 The Yellowtail Flounder shift in core area has, in large part, resulted from a reduction in the core area along the southern flanks of GB. The core area has been consolidated in a central region of GB that straddles the ICJ line dividing Canada and the U.S (Figure \@ref(fig:cog-hep)). The COG of Yellowtail Flounder has been relatively stable both seasonally and between eras since the 1990s despite large changes in the size of the core area during this time. The trends in, and size of, the core area during the Spring and Fall have been very similar since the 1980s. In both seasons there were large increases in core area in the 1990s followed by a variable, yet generally increasing, size of core area more recently (Figure \@ref(fig:area-hep)). In the Winter an area of similar location and size is observed, but the size of the core area in the Winter has been in decline since a period of increase in the 1990s (Figure \@ref(fig:area-hep)).
 
@@ -10,18 +10,18 @@ For both stocks the changes in the size of the core area were larger in the U.S.
 
 ## Environmental Covariates
 
-The spatial fields for the three environmental variables retained by model selection are shown in Figure \@ref(fig:SST-Dep-Sed). The average SST between 1997 and 2008 had the largest effect on the OP of Atlantic Cod; they were more likely to be found in regions of the bank with a lower SST (Figure \@ref(fig:cod-fe)). For all 3 surveys the OP of Atlantic Cod declined rapidly in regions of the bank where the SST was above approximately 10°C (Figure \@ref(fig:cod-fe)). Although the Dep relationship was also retained in the final Atlantic Cod model the effect of Dep on OP was substantially smaller than the SST effect. During the Winter and Spring the OP peaked between `r c.dep.peak` m and declined slowly in shallower and deeper waters (Figure \@ref(fig:cod-fe)). There was no clear relationship with Dep in the Winter.
+The spatial fields for the three environmental variables retained by model selection are shown in Supplemental Figure \@ref(fig:SST-Dep-Sed). The average SST between 1997 and 2008 had the largest effect on the OP of Atlantic Cod; they were more likely to be found in regions of the bank with a lower SST (Figure \@ref(fig:cod-fe)). For all 3 surveys the OP of Atlantic Cod declined rapidly in regions of the bank where the SST was above approximately 10°C (Figure \@ref(fig:cod-fe)). Although the Dep relationship was also retained in the final Atlantic Cod model the effect of Dep on OP was substantially smaller than the SST effect. During the Winter and Spring the OP peaked between `r c.dep.peak` m and declined slowly in shallower and deeper waters (Figure \@ref(fig:cod-fe)). There was no clear relationship with Dep in the Winter.
 
-For Yellowtail Flounder, Dep had the largest effect on OP, with Yellowtail Flounder most likely to be observed between depths of `r yt.dep.peak` m in each of the 3 surveys and the Dep effect on OP was highest during the Spring (Figure \@ref(fig:yt-fe)). The average SST between 1997 and 2008 was also included in the final model for all three seasons, with Yellowtail Flounder OP generally declining as SST increased. The effect of SST was least pronounced in the Fall. The sediment type also had a significant influence on the OP for Yellowtail Flounder in the Winter and Fall, with Sand and Gravel-Sand having higher OPs than the Other sediment category, this difference is most notable during the Winter (Figures \@ref(fig:diag-3-fe) and \@ref(fig:yt-fe)).
+For Yellowtail Flounder, Dep had the largest effect on OP, with Yellowtail Flounder most likely to be observed between depths of `r yt.dep.peak` m in each of the 3 surveys and the Dep effect on OP was highest during the Spring (Figure \@ref(fig:yt-fe)). The average SST between 1997 and 2008 was also included in the final model for all three seasons, with Yellowtail Flounder OP generally declining as SST increased. The effect of SST was least pronounced in the Fall. The sediment type also had a significant influence on the OP for Yellowtail Flounder in the Winter and Fall, with Sand and Gravel-Sand having higher OPs than the Other sediment category, this difference is most notable during the Winter (Figure \@ref(fig:yt-fe) and Supplemental Figure \@ref(fig:diag-3-fe)).
 
 ## Model Hyperparameters
 
-The decorrelation range for Atlantic Cod was above 100 km throughout the year and was generally higher than that observed for Yellowtail Flounder (Figure \@ref(fig:hyper-range-var-est)). The range was highest for Atlantic Cod in the Spring with an estimate of `r range.spring.cod.mn.ci` km while the range during the Winter spawning period was the lowest at `r range.winter.cod.mn.ci` km. In the Fall the estimate declined from the Spring; the range in this period may be influenced by a portion of the stock being located outside of the survey domain and the stock being more concentrated in one area (Figure \@ref(fig:hyper-range-var-est)). For Yellowtail Flounder, the lowest range was estimated in the Winter at `r range.winter.yt.mn.ci` km with the Spring and Fall range estimates being higher and somewhat more variable than the Winter range estimate. The range estimates of Yellowtail Flounder throughout the year were smaller and less variable than that observed with Atlantic Cod (Figure \@ref(fig:hyper-range-var-est)). The uncertainty of these estimates precludes any statistical differences being observed between the seasons.
+The decorrelation range for Atlantic Cod was above 100 km throughout the year and was generally higher than that observed for Yellowtail Flounder (Figure \@ref(fig:hyper-range-var-est)). The range was highest for Atlantic Cod in the Spring with an estimate of `r range.spring.cod.mn.ci` km while the range during the Winter spawning period was the lowest at `r range.winter.cod.mn.ci` km. In the Fall the estimate declined from the Spring; the range in this period may be influenced by a portion of the stock being located outside of the study domain and the stock being more concentrated in one area (Figure \@ref(fig:hyper-range-var-est)). For Yellowtail Flounder, the lowest range was estimated in the Winter at `r range.winter.yt.mn.ci` km with the Spring and Fall range estimates being higher and somewhat more variable than the Winter range estimate. The range estimates of Yellowtail Flounder throughout the year were smaller and less variable than that observed with Atlantic Cod (Figure \@ref(fig:hyper-range-var-est)). The uncertainty of these estimates precludes any statistical differences being observed between the seasons.
 
 The standard deviation of the random field was lower for Atlantic Cod in the Winter and Spring than during the Fall (Figure \@ref(fig:hyper-sd-var-est)), this is indicative of the increased clustering and the relatively small effect of the environmental covariates during the Fall for Atlantic Cod. The standard deviation of the random field is highest for Yellowtail Flounder in the Winter and the seasonal differences for Yellowtail Flounder are smaller than those observed with Atlantic Cod (Figure \@ref(fig:hyper-sd-var-est)). The standard deviation of the Yellowtail Flounder field is higher than Atlantic Cod in the Winter and Spring, but lower in the Fall (Figure \@ref(fig:hyper-sd-var-est)). The posteriors of other hyperparameters for both stocks in the Winter, Spring, and Fall are provided in Supplemental Figures \@ref(fig:hyper-cod-winter-post) - \@ref(fig:hyper-yt-fall-post).
 
 ## Validation and Prediction
 
-The 5-fold cross validation indicated that each of the models used for 5-fold cross validation (intercept only, SST (Atlantic Cod), DEP (Yellowtail Flounder), and DEP + SST) were able to predict the distribution for both stocks without an increase in bias or a loss of accuracy (Figure \@ref(fig:folds)). The mean error of the residuals for the validation training set predictions were similar to the error from the predicted test data and while the mean error of the test data was generally more variable, the estimates were centred on 0 and thus there was no evidence of bias in these predictions (Figure \@ref(fig:folds)). The RMSE from the test and training data showed similar patterns for both stocks and most of the models, although for Yellowtail Flounder the RMSE for both the training and test data from the intercept only model was slightly lower than either of the models with covariates indicating that the inclusion of the environmental covariates may result in a small loss of out-of-sample prediction (Figure \@ref(fig:folds)).
+The 5-fold cross validation indicated that each of the models used for 5-fold cross validation (intercept only, SST (Atlantic Cod), DEP (Yellowtail Flounder), and DEP + SST) were able to predict the distribution for both stocks without an increase in bias or a loss of accuracy (Figure \@ref(fig:folds)). The mean error of the residuals for the validation training set predictions were similar to the error from the predicted test data and while the mean error of the test data was generally more variable, the estimates were centred on 0 and thus there was no evidence of bias in these predictions (Figure \@ref(fig:folds)). The RMSE from the test and training data showed similar patterns for both stocks and most of the models, although for Yellowtail Flounder the RMSE for both the training and test data from the intercept only model was slightly lower than either of the models with covariates. This suggests that the inclusion of the environmental covariates may result in a small loss of out-of-sample prediction (Figure \@ref(fig:folds)).
 
-The models resulted in a slight loss of accuracy when predicting the spawning distributions of each stock 1, 2, and 3 years into the future (Figure \@ref(fig:pred-17-19)), but the predictions were well below the RMSE associated with a model with no predictive ability (dashed line; Figure \@ref(fig:pred-17-19)). For both stocks the 2018 data consistently had the lowest prediction accuracy with the models tending to predict individuals where none were observed. This is in agreement with observations of the survey biomass indices being near historic lows for both stocks in 2018 [@legaultStockAssessmentGeorges2018; @andrushchenkoAssessmentEasternGeorges2018]. Generally, the predictive error from these models were at the high end of the range of the model error estimates when data were available, this indicates that the predictions from these models could be used to inform the spatial OP for both stocks up to 3 years into the future (Figure \@ref(fig:pred-17-19)).
+The models resulted in a slight loss of accuracy when predicting the spawning distributions of each stock 1, 2, and 3 years into the future (Figure \@ref(fig:pred-17-19)), but the predictions were well below the RMSE associated with a model with no predictive ability (dashed line; Figure \@ref(fig:pred-17-19)). For both stocks the 2018 data consistently had the lowest prediction accuracy with the models tending to predict individuals where none were observed. This is in agreement with observations of the survey biomass indices being near historic lows for both stocks in 2018 [@legaultStockAssessmentGeorges2018; @andrushchenkoAssessmentEasternGeorges2018]. Generally, the predictive error from these models were at the high end of the range of the model error estimates when data were available, this indicates that the predictions from these models cmay be able to predict the spatial OP patterns for both stocks up to 3 years into the future (Figure \@ref(fig:pred-17-19)).
