--- a/02-methods.Rmd
+++ b/02-methods.Rmd
@@ -11,7 +11,7 @@ Survey data were obtained from the Fisheries and Oceans Canada (DFO) "*Winter*" 
 
 ## Environmental covariates
 
-A suite of 21 spatial environmental and oceanographic datasets were obtained for this analysis (Table \@ref(tab:table-1)). To eliminate redundant variables, Variance Inflation Factors (VIFs) were calculated for all variables and any variables with VIF scores \> 3 were removed. This procedure was repeated until no variables remained with a VIF score \> 3 [@zuurProtocolDataExploration2010]. A Principal Component Analysis (PCA) was undertaken using the data from the associated station locations for each survey with variables excluded from the PCA if they showed no evidence for correlation with other variables or if they had very non-linear correlation patterns (Table \@ref(tab:table-1)). The top 4 PCA components, accounting for at least 80% of the variability in the data for a given survey, were retained and included as covariates for the models in addition to the retained environmental covariates (See Supplement Figure \@ref(fig:PCA)).
+A suite of 22 spatial environmental and oceanographic datasets were obtained for this analysis (Table \@ref(tab:table-1)). To eliminate redundant variables, Variance Inflation Factors (VIFs) were calculated for all variables and any variables with VIF scores \> 3 were removed. This procedure was repeated until no variables remained with a VIF score \> 3 [@zuurProtocolDataExploration2010]. A Principal Component Analysis (PCA) was undertaken using the data from the associated station locations for each survey with variables excluded from the PCA if they showed no evidence for correlation with other variables or if they had very non-linear correlation patterns (Table \@ref(tab:table-1)). The top 4 PCA components, accounting for at least 80% of the variability in the data for a given survey, were retained and included as covariates for the models in addition to the retained environmental covariates (See Supplemental Figure \@ref(fig:PCA)).
 
 ## Statistical Analysis
 
@@ -35,13 +35,13 @@ Four spatial random field ($u_{it}$) models with differing temporal components w
 
 ### Model Selection Overview
 
-Stage 1 model selection for the different covariate models was undertaken using the static random field by adding individual covariates. For this first analysis, covariates were retained if low WAIC scores were obtained. CPO and DIC results were similar to WAIC so only WAIC is discussed further; the model selection results are available in the supplement and the complete results can be found in the Model Output and Model Diagnostics sections of the interactive dashboard (https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard). For Atlantic Cod this analysis identified depth (DEP) and the average sea surface temperature between 1997 and 2008 (SST) as having low WAIC scores in 2 of the 3 surveys [data obtained from @greenlawGeodatabaseHistoricalContemporary2010]. For Yellowtail Flounder, DEP was identified as an informative covariate in all 3 surveys. In addition, SED, and the average chlorophyll concentration between 1997 and 2008 (CHL) were retained based on their low WAIC scores in the Fall survey. Given the low number of informative covariates DEP, SST, and CHL were all retained for both species in Stage 2 of model selection. In Stage 2 of model selection, these variables were added pairwise (e.g. models included SST + DEP, DEP + CHL, and SST + CHL) for both stocks and again compared using WAIC using the 10-year random fields. In Stage 3 of covariate model selection, models with 3 covariates were tested based on the Stage 2 results. For Atlantic Cod a three term model that included additive terms for SST, DEP, and CHL was the most complex model tested. For Yellowtail Flounder, the most complex model included SST, DEP, and SED. In Stage 3, additional covariates were retained if the WAIC for that model resulted in an improvement of the WAIC of more than 2, as compared to the lowest WAIC for the more parsimonious model.
+Stage 1 model selection for the different covariate models was undertaken using the static random field by adding individual covariates. For this first analysis, covariates were retained if low WAIC scores were obtained. CPO and DIC results were similar to WAIC so only WAIC is discussed further; the model selection results are available in the supplement and the complete results can be found in the Model Output and Model Diagnostics sections of the interactive dashboard (https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard). For Atlantic Cod this analysis identified depth (DEP) and the average sea surface temperature between 1997 and 2008 (SST) as having low WAIC scores in 2 of the 3 surveys [data obtained from @greenlawGeodatabaseHistoricalContemporary2010]. For Yellowtail Flounder, DEP was identified as an informative covariate in all 3 surveys. In addition, SED, and the average chlorophyll concentration between 1997 and 2008 (CHL) were retained based on their low WAIC scores in the Fall survey. Given the low number of informative covariates DEP, SST, and CHL were all retained for both species in Stage 2 of model selection. In Stage 2 of model selection, the variables were added pairwise (e.g. for Atlantic Cod the models included SST + DEP, DEP + CHL, and SST + CHL) for both stocks and again compared using WAIC using the 10-year random fields. In Stage 3 of covariate model selection, models with 3 covariates were tested based on the Stage 2 results. For Atlantic Cod a three term model that included additive terms for SST, DEP, and CHL was the most complex model tested. For Yellowtail Flounder, the most complex model included SST, DEP, and SED. In Stage 3, additional covariates were retained if the WAIC for that model resulted in an improvement of the WAIC of more than 2, as compared to the lowest WAIC for the more parsimonious model.
 
-Model selection on the temporal random fields was done while holding the environmental covariate terms the same.  Initial model selection for the random fields (10 and 5-year fields) was done using the Dep + SST model for both species in all seasons given the general support for the Dep + SST model identified in Stage 2 of covariate model selection. For both species this indicated that the 10-year field was inferior to the more flexible 5-year random fields.  For Atlantic Cod, the 3 and 5-year random fields were compared using the Dep + SST (which was the covariate model with the lowest WAIC). For Yellowtail, the final step of the random field model selection used the Dep + SST + Sed model (which was the covariate model with the lowest WAIC) for the 3-year and 5-year random field comparison. Note that for Yellowtail Flounder the Dep + SST + Sed covariate model was not run with the 10 year random field and the Dep + SST covariate model was not run using the 3-year random fields in all three seasons, thus there were no results to show for these *potential* models. The key model selection results are provided in the supplement and the full results can be found in the dashboard. For Atlantic Cod the *Full Model* chosen included additive *Dep* and *SST* covariates and used a random field which changed every 5 years.  For Yellowtail Flounder, the *Full Model* chosen included additive *Dep*, *SST*, and *Sed* covariates, the *Winter* and *Spring* models used a 3-year random field, while the *Fall* used a 5-year random field.
+Model selection on the temporal random fields was done while holding the environmental covariate terms the same.  Initial model selection for the random fields (10 and 5-year fields) was done using the Dep + SST model for both species in all seasons given the general support for the Dep + SST model identified in Stage 2 of covariate model selection. For both species this indicated that the 10-year field was inferior to the more flexible 5-year random fields.  For Atlantic Cod, the 3 and 5-year random fields were compared using the Dep + SST (which was the covariate model with the lowest WAIC). For Yellowtail, the final step of the random field model selection used the Dep + SST + Sed model (which was the covariate model with the lowest WAIC) for the 3-year and 5-year random field comparison. Note that for Yellowtail Flounder the Dep + SST + Sed covariate model was not run with the 10 year random field and the Dep + SST covariate model was not run using the 3-year random fields in all three seasons, thus there were no results to show for these *potential* models. The key model selection results are provided in the supplement and the full results can be found in the dashboard. For Atlantic Cod the *Full Model* chosen included additive *Dep* and *SST* covariates and used a random field which changed every 5 years.  For Yellowtail Flounder, the *Full Model* chosen included additive *Dep*, *SST*, and *Sed* covariates, the *Winter* and *Spring* models used a 3-year random field, while the *Fall* model used a 5-year random field.
 
 ## Model Prediction 
 
-A predictive grid with cells having an area of approximately `r mesh.grid.size` km^2^ was developed (See Supplement Figure \@ref(fig:mesh-grid)). The models were developed using data up to and including `r max(dat.final$year)`  To obtain the predictions of the *OP* for Cod, the *Full Model* included additive *Dep* and *SST* terms and used the 5-year random field.  For Yellowtail *OP* predictions, the *Full Model* included additive *Dep*, *SST*, and *Sed* covariates, the models for the Winter and Spring used the 3-year random field, while the model for the Fall used the 5-year random field (see either the interactive dashboard or the Supplemental Figures \@ref(fig:diag-1-fe)-\@ref(fig:diag-rf) for model selection results). Each cell was intersected with average *SST*, *DEP*, and *Sed* fields (see Supplemental Figure \@ref(fig:SST-Dep-Sed) for the distribution of these environmental covariates) and the OP was estimated for each grid cell in each *era* for Atlantic Cod and Yellowtail Flounder in the Winter, Spring, and Fall. The results using the predictive grid were used to calculate the *core area* for each *era*.  
+A predictive grid with cells having an area of approximately `r mesh.grid.size` km^2^ was developed (See Supplemental Figure \@ref(fig:mesh-grid)). The models were developed using data up to and including `r max(dat.final$year)`.  To obtain the predictions of the *OP* for Cod, the *Full Model* included additive *Dep* and *SST* terms and used the 5-year random field.  For Yellowtail *OP* predictions, the *Full Model* included additive *Dep*, *SST*, and *Sed* covariates, the models for the Winter and Spring used the 3-year random field, while the model for the Fall used the 5-year random field (see either the interactive dashboard or the Supplemental Figures \@ref(fig:diag-1-fe)-\@ref(fig:diag-rf) for model selection results). Each cell was intersected with average *SST*, *DEP*, and *Sed* fields (see Supplemental Figure \@ref(fig:SST-Dep-Sed) for the distribution of these environmental covariates) and the OP was estimated for each grid cell in each *era* for Atlantic Cod and Yellowtail Flounder in the Winter, Spring, and Fall. The results using the predictive grid were used to calculate the size of the *core area* (OP $\geq$ `r hi.prob`) for each *era*.  
 
 This predictive grid was used to calculate the centre of gravity (COG) of the *core area* for each *era*. The COG was calculated in the UTM coordinate system (EPSG Zone: 32619) using the easting (*X*) and northing (*Y*) for each cell identified as *core area* (*i*) in each *era* (*t*) and weighted by the *OP* at each of these locations.
 
