--- a/04-discussion.Rmd
+++ b/04-discussion.Rmd
@@ -1,8 +1,8 @@
 # DISCUSSION
 
-The SDMs developed here incorporate environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework enables a more in depth understanding of the impact of temporal shifts in species distributions than simpler aggregation based indices that are often used in fisheries science to indicate temporal shifts in a stocks distribution [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015 and see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distributions of both species towards the east and north was identified, in both cases this shift was in large part due to the loss of high OP areas in the southern and western portion of GB (primarily in US waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the species; the Yellowtail Flounder distribution was relatively stable throughout the year, while Atlantic Cod moved towards the northeastern slope of GB during the fall. Finally, the models were able to predict the location of Atlantic Cod and Yellowtail Flounder during spawning up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a *core area* over time and between seasons (surveys), quantify how rapidly shifts in their distributions occur, and provide short term forecasts of the spatial OP patterns in future years.
+The SDMs developed here incorporate environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework enables a more in depth understanding of the impact of temporal shifts in species distributions than simpler aggregation based indices that are often used in fisheries science to indicate temporal shifts in a stocks distribution [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015 and see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distributions of both species towards the east and north was identified, in both cases this shift was in large part due to the loss of *core area* in the southern and western portion of GB (primarily in US waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the species; the Yellowtail Flounder distribution was relatively stable throughout the year, while Atlantic Cod moved towards the northeastern slope of GB during the fall. Finally, the models were able to predict the location of Atlantic Cod and Yellowtail Flounder during spawning up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a *core area* over time and between seasons (surveys), quantify how rapidly shifts in their distributions occur, and provide short term forecasts of the spatial OP patterns in future years.
 
-The core area for Atlantic Cod collapsed rapidly in the early 1990s in unison with the collapse of Atlantic Cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse, the size of the core area has remained relatively consistent but has continued to slowly shift to the northeast with this shift more pronounced in the Fall. The loss of high EP areas from the warmer southern and western reaches of the bank have primarily been the reason for the apparent shift in the distribution of cod into Canadian waters. In more recent years, the Fall distribution of Atlantic Cod was likely located on the northeastern slope of the bank and outside of the core survey domains of these surveys.
+The core area for Atlantic Cod collapsed rapidly in the early 1990s in unison with the collapse of Atlantic Cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse, the size of the core area has remained relatively consistent but has continued to slowly shift to the northeast with this shift more pronounced in the Fall. The loss of *core area* from the warmer southern and western reaches of the bank have primarily been the reason for the apparent shift in the distribution of cod into Canadian waters. In more recent years, the Fall distribution of Atlantic Cod was likely located on the northeastern slope of the bank and outside of the core survey domains of these surveys.
 
 This apparent northeastern shift of the stock over the course of this study suggests that the surveys may no longer be sampling the entirety of Atlantic Cod throughout the course of the year (i.e. a higher proportion of the stock may now be located outside of the survey domain in the Fall than in the past). Each of the survey indices had been used as inputs to the Atlantic Cod stock assessment model for eastern GB Atlantic Cod [@andrushchenkoAssessmentEasternGeorges2018]. However, this assessment model suffered from such significant retrospective patterns that the model was recently rejected; the results of this study are in agreement with the suggestion that the observed shift in the distribution of Atlantic Cod outside of the survey domain was a contributing factor to the model retrospective problems [@andrushchenkoAssessmentEasternGeorges2018]. In addition, because the management of this stock is shared between Canada and the U.S., the observed shift in the core distribution to Canadian waters suggests that shared management policies, such as quota sharing agreements between the two jurisdictions, may require regular review [e.g. @tmgcDevelopmentSharingAllocation2002]. <!--
 The static SST layer and depth were the most influential covariates and indicated that cod preferred the colder portions of the bank throughout the year at depths between XX and XX meters. 
@@ -16,11 +16,11 @@ Yellowtail Flounder were more likely to be found on bottom types which included 
 
 ### Environmental Covariates and Random Fields
 
-Few of the static environmental covariates examined were related to the distribution of either stock. Only the static SST layer, depth, and sediment type (Yellowtail only) had any consistent relationship to the likelihood of encountering either species throughout the duration of this study. The influence of the average SST layer as an environmental covariate in the models was somewhat surprising given this layer was derived from monthly SST composites from the Advanced Very High Resolution Radiometer (AVHRR) satellite from 1997 to 2008 [@greenlawGeodatabaseHistoricalContemporary2010] and thus represents an aggregate, static layer from only a temporal subset of the time period covered by the groundfish survey data. However, the importance of this SST layer may be due to it capturing general widespread oceanographic features across the bank domain. Further, the observed variability of the effect between seasons is likely a reflection of the connection between surface waters and the benthos given that the degree of vertical mixing and stratification varies with season and spatially across the bank [@kavanaughThirtyThreeYearsOcean2017]. It is acknowledged that the interpretation of the static SST layer used in these analyses as a thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the species reaction to these patterns have remained static over the study period. To understand how the thermal environment is influencing the species distributions on GB, the development of more advanced models that use either dynamic SST or modelled bottom temperature layers would be beneficial [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. Variability in OP cannot be inferred from static environmental layers like those used in this analysis, the random fields were the means by which the changes in the species distributions could be tracked.
+Few of the static environmental covariates examined were related to the distribution of either stock. Only the static SST layer, depth, and sediment type (Yellowtail only) had any consistent relationship to the likelihood of encountering either species throughout the duration of this study. The influence of the average SST layer as an environmental covariate in the models was somewhat surprising given this layer was derived from monthly SST composites from the Advanced Very High Resolution Radiometer (AVHRR) satellite from 1997 to 2008 [@greenlawGeodatabaseHistoricalContemporary2010] and thus represents an aggregate, static layer from only a temporal subset of the time period covered by the groundfish survey data. However, the importance of this SST layer may be due to it capturing general widespread oceanographic features across the bank domain. Further, the observed variability of the effect between seasons is likely a reflection of the connection between surface waters and the benthos given that the degree of vertical mixing and stratification varies with season and spatially across the bank [@kavanaughThirtyThreeYearsOcean2017]. It is acknowledged that the interpretation of the static SST layer used in these analyses as a thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the species reaction to these patterns have remained static over the study period. To understand how the thermal environment is influencing the species distributions on GB, the development of more advanced models that use either dynamic SST or modelled bottom temperature layers would be beneficial [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. Changes in species distributions cannot be inferred from static environmental layers like those used in this analysis, the random fields were the means by which the changes in the species distributions could be tracked.
 
-From a predictive standpoint the random fields were often able to predict the OP without a substantial loss of predictive ability when compared to the more complex models including the static environmental data (e.g. Figure \@ref(fig:folds)). This occurred because the random fields are flexible enough to capture the variability inherent in the data in each era, while the environmental covariate relationships were constrained to be invariant throughout the entire time series. Recent research suggests that using a static random field in conjunction with a spatio-temporal random field may provide less biased and more accurate estimates than models that rely solely on environmental covariates [@yinPrepSpatiotemporalModel2019]. These results also suggest that where environmental data aren't available or are prohibitively expensive to collect, these spatial models on their own have some utility in understanding variability and drivers of species distributions. This information from these models could then be used as a first step to better understand the patterns and processes driving change in the species distributions and subsequently help with the design more efficient data collection programs.
+From a predictive standpoint the random fields were often able to predict the OP without a substantial loss of predictive ability when compared to the more complex models including the static environmental data (e.g. Figure \@ref(fig:folds)). This occurred because the random fields are flexible enough to capture the variability inherent in the data in each era, while the environmental covariate relationships were constrained to be invariant throughout the entire time series. Recent research suggests that using a static random field in conjunction with a spatio-temporal random field may provide less biased and more accurate estimates than models that rely solely on environmental covariates [@yinPrepSpatiotemporalModel2019]. The results of the current study also suggest that when environmental data aren't available or are prohibitively expensive to collect, these spatial models on their own have some utility in understanding variability and drivers of species distributions. The information from these spatial-temporal models could then be used as a first step to better understand the patterns and processes driving change in the species distributions and subsequently help with the design more efficient data collection programs.
 
-Finally, it should be noted that the observed shifts in the distributions observed here could be due to environmental change and/or direct anthropogenic factors [e.g. fishing; @boudreauConnectivityPersistenceLoss2017]. The shifts in the distributions in the 1970s and 1980s may indeed have been related to either fishing or environmental factors given the relatively high fishing effort during this period [@andersonHistoryFisheriesManagement1997; @andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. However several lines of evidence suggest that fisheries are not inhibiting these stocks from re-establishing themselves in the southern or western portions of GB in more recent years. For example, in the early 2000's there was a large increase in the biomass of Yellowtail Flounder which  quickly lead to a directed fishery for Yellowtail Flounder and was followed by a rapid decline in the biomass of this stock [@legaultStockAssessmentGeorges2018]. During this short lived Yellowtail Flounder renaissance, the area of elevated OP did increase substantially on GB, but it remained centred on the ICJ line and the stock did not re-establish itself in the southern or western regions on GB. Additionally, the lack of a large directed fishery for Atlantic Cod on GB since the early 1990s, along with the addition of two large closures in United States waters [@murawskiLargescaleClosedAreas2000] have not resulted in a shift in the distribution of this stock back into southern or western portions of the bank . Finally, in recent years the bycatch of these two stocks from the two lucrative scallop fisheries on GB has also been in decline [@okeefeEvaluatingEffectivenessTime2014a; @keithEvaluatingSocioeconomicConservation2020] but this has not resulted in an expansion of the distribution of either stock. Given these patterns along with the regional trends observed for other stocks of these species [@bundySealsCodForage2009; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015], it seems likely the distributions of both stocks in recent years has been predominately influenced by environmental conditions.
+Finally, it should be noted that the observed shifts in the distributions observed here could be due to environmental change and/or direct anthropogenic factors [e.g. fishing; @boudreauConnectivityPersistenceLoss2017]. The shifts in the distributions in the 1970s and 1980s may indeed have been related to either fishing or environmental factors given the relatively high fishing effort during this period [@andersonHistoryFisheriesManagement1997; @andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. However several lines of evidence suggest that fisheries are not inhibiting these stocks from re-establishing themselves in the southern or western portions of GB in more recent years. For example, in the early 2000's there was a large increase in the biomass of Yellowtail Flounder which  quickly lead to a directed fishery for Yellowtail Flounder and was followed by a rapid decline in the biomass of this stock [@legaultStockAssessmentGeorges2018]. During this short lived Yellowtail Flounder renaissance, the size of the *core area* did increase substantially on GB, but it remained centred on the ICJ line and the stock did not re-establish itself in the southern or western regions on GB. Additionally, the lack of a large directed fishery for Atlantic Cod on GB since the early 1990s, along with the addition of two large closures in United States waters [@murawskiLargescaleClosedAreas2000] have not resulted in a shift in the distribution of this stock back into southern or western portions of the bank . Finally, in recent years the bycatch of these two stocks from the two lucrative scallop fisheries on GB has also been in decline [@okeefeEvaluatingEffectivenessTime2014a; @keithEvaluatingSocioeconomicConservation2020] but this has not resulted in an expansion of the distribution of either stock. Given these patterns along with the regional trends observed for other stocks of these species [@bundySealsCodForage2009; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015], it seems likely the distributions of both stocks in recent years has been predominately influenced by environmental conditions.
 
 ### Conclusion
 
