--- a/index.Rmd
+++ b/index.Rmd
@@ -1,20 +1,20 @@
 ---
 output:
-  bookdown::word_document2:
-    fig_caption: yes
-    number_sections: false
-  fontsize: 12pt
-  sansfont: Liberation Sans
-  mainfont: Liberation Sans
-  classoption: twocolumn
-  language: english
-  # bookdown::html_document2: default
-  # bookdown::pdf_document2:
-  #     keep_tex: yes
-  #     number_sections: false
-  #     toc: no
-  # language: english
+  # bookdown::word_document2:
+  #   fig_caption: yes
+  #   number_sections: false
+  # fontsize: 12pt
+  # sansfont: Liberation Sans
+  # mainfont: Liberation Sans
   # classoption: twocolumn
+  # language: english
+  # bookdown::html_document2: default
+  bookdown::pdf_document2:
+      keep_tex: yes
+      number_sections: false
+      toc: no
+  language: english
+  classoption: twocolumn
 # End of options to set
 title: "Quantifying changes in the Distribution of Atlantic Cod and Yellowtail Flounder on Georges Bank"
 author: |
@@ -35,7 +35,7 @@ report_number: nnn
 region: Maritimes Region
 author_list: "Keith, D.M., Sameoto, J.A., Keyser, F.M., Andrushchenko, I."
 abstract: |
-  Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how spatial and temporal heterogenity in processes impact the populations dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat stocks as homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods have resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for yellowtail flounder (*Limanda ferruginea*) and Atlantic cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both species.  The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both species throughout the year.  Significant shifts in the distribution of both species occurs relatively frequently, with the distribution of cod observed to differ approximately every 5 years, while the Yellowtail distribution appears to fluctuate at least every 3 years. The core areas for both species shifts to the north and east throughout the study period.  Much of this shift is due to the loss of the species from southern and western portions of GB.  The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring, while in the fall the distribution of cod shifts towards the edge of the bank. For cod there has been a substainal decline in core area within the United States waters on Georges Bank while there has been little change in Canadian waters.  In U.S. waters the yellowtail core area declined rapidly in the late 1970s and early 1980s, but rebounded rapidly in the 1990s and early 2000s, while the core area was unchanged or slowly increased in Canadian waters over this time. These trends have resulted in an increase in the proportion of both stocks in Canadian waters in recent years. The models for both stocks were also relatively successful at predicting the likely location of the stock up to 3 years into the future, in addtion the simplified models which use only the random field for prediction performed as well as the models that included environmental covariates. Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions even without the use of environmental covariates. The incorporation of spatial information into science advice will improve our ability to sustainably manage these stocks.  
+  Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how spatial and temporal heterogenity in processes impact the population dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat stocks as homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods have resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for Yellowtail Flounder (*Limanda ferruginea*) and Atlantic Cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both stocks.  The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both stocks throughout the year.  Significant shifts in the distribution of both stocks occurs relatively frequently, with the distribution of Atlantic Cod observed to differ approximately every 5 years, while the Yellowtail Flounder distribution appears to fluctuate at least every 3 years. The core areas for both stocks shifts to the north and east throughout the study period.  Much of this shift is due to the loss of the stocks from southern and western portions of GB.  The seasonal distribution of Atlantic Cod and Yellowtail Flounder are relatively consistent throughout the late winter and spring, while in the fall the distribution of Atlantic Cod shifts towards the edge of the bank. For Atlantic Cod there has been a substainal decline in core area within the United States waters on Georges Bank while there has been little change in Canadian waters.  In U.S. waters the Yellowtail Flounder core area declined rapidly in the late 1970s and early 1980s, but rebounded rapidly in the 1990s and early 2000s, while the core area was unchanged or slowly increased in Canadian waters over this time. These trends have resulted in an increase in the proportion of both stocks in Canadian waters in recent years. The models for both stocks were also relatively successful at predicting the likely location of the stock up to 3 years into the future, in addtion the simplified models which use only the random field for prediction performed as well as the models that included environmental covariates. Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions even without the use of environmental covariates. The incorporation of spatial information into science advice will improve our ability to sustainably manage these stocks.  
 header: "Draft working paper --- Do not cite or circulate" # or "" to omit
 
 knit: bookdown::render_book
@@ -229,7 +229,6 @@ options(kableExtra.latex.load_packages = FALSE)
 # Don't use scientific notation please!!
 options(scipen=999)
 # Set a nice theme for the ggplots unless I override
-theme_set(theme_few(base_size = 12))
 
 # For examplorary purposes I've kept the option to translate to French, and to ID if we are making a word or pdf docnot needed otherwise.
 # `french` is extracted from the YAML header metadata, also later we use metadata to make sure the tables are formatted correctly for word/pdf
